--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
   ],
   "require": {
     "php": ">=7.0",
-    "illuminate/contracts": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-    "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-    "illuminate/http": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*"
+    "illuminate/contracts": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*",
+    "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*",
+    "illuminate/http": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.4",
